--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="./style.css"> 
 </head>
 <body>
     <header>
@@ -41,44 +41,44 @@
     <!-- <div class="blod"></div> -->
       <div class="main-bread">
     <div class="bread">
-        <img src="/challah.jpg" alt="">
+        <img src="./challah.jpg" alt="">
         <p>$6.00<br> CHALLAH </p>
          <button>Add</button> 
     </div>
      <div class="bread2"> 
-        <img src="/croissant.jpg" alt="">
+        <img src="./croissant.jpg" alt="">
         <p>$6.00<br>CROISSANT</p>
         <button>Add</button>
      </div>
       <div class="bread3"> 
-        <img src="/corn.jpg" alt="">
+        <img src="./corn.jpg" alt="">
         <p>$5.00<br>CORNBREAD</p>
         <button>Add</button>
      </div> 
     <div class="bread4"> 
-        <img src="/sourdough.jpg" alt="">
+        <img src="./sourdough.jpg" alt="">
         <p>$3.00<br>SOURDOUGH</p>
         <button>Add</button>
      </div> 
 </div>
 <div class="main-bread1">
     <div class="bread5">
-        <img src="/pretzel.jpg" alt="">
+        <img src="./pretzel.jpg" alt="">
         <p>$3.00<br>PRETZEL</p>
         <button>Add</button>
     </div>
     <div class="bread6">
-        <img src="/roll.jpg" alt="">
+        <img src="./roll.jpg" alt="">
         <p>$6.00<br>ROLL</p>
         <button>Add</button>
     </div>
     <div class="bread7">
-        <img src="/french.jpg" alt="">
+        <img src="./french.jpg" alt="">
         <p>$6.00<br>FRENCH BREAD</p>
         <button>Add</button>
     </div>
     <div class="bread8">
-        <img src="/hawaiian.jpg" alt="">
+        <img src="./hawaiian.jpg" alt="">
         <p>$6.00<br>HAWAIIAN ROLL</p>
         <button>Add</button>
 </div>
