--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- <div class="blod"></div> -->
       <div class="main-bread">
     <div class="bread">
-        <img src="./challah.jpg" alt="">
+        <img/form./challah.jpg" alt="">
         <p>$6.00<br> CHALLAH </p>
          <button>Add</button> 
     </div>
